--- a/draft/hdr.tex
+++ b/draft/hdr.tex
@@ -1,5 +1,5 @@
 % 
-\title{Automated Equivalence Proofs of \\ Functional Programs}
+\title{Automated Inference of Relational Types}
 
 % when 'make draft'
 \ifdefined\DRAFT
