--- a/draft/related-work.tex
+++ b/draft/related-work.tex
@@ -5,6 +5,9 @@
 
 -discuss CAV paper on equivalence of functional programs
 
+-discuss recent paper by Barthe. Relational types are not really the
+ contribution. The contribution is automating inference
+
 \BH{discuss related work}
 
 %%% Local Variables: 
