--- a/draft/background.tex
+++ b/draft/background.tex
@@ -85,61 +85,45 @@ Let $P$ be fixed for the rest of this section.
   \centering
   \begin{gather*}
   % evaluate const:
-  \inference[ CONST ]{ }{ \Gamma \judges c \evalsto c } 
-  % evaluate variable:
-  \inference[ VAR ]{ }{ \Gamma \judges x \evalsto \Gamma(x) }
+  \inference[ CONST ]{ }{ c \evalsto c } \qquad
   % evaluate binary operations:
   \inference[ OP ]{ %
-    \Gamma \judges e_0 \evalsto v_0 & %
-    \Gamma \judges e_1 \evalsto v_1 } %
-  { \Gamma \judges e_0 \oplus e_1 \evalsto v_0 \oplus v_1 } \\
-  \\
+    e_0 \evalsto v_0 & %
+    e_1 \evalsto v_1 } %
+  { e_0 \oplus e_1 \evalsto v_0 \oplus v_1 } \\
   % evaluate if-then-else by then branch
   \inference[ ITE-T ]{ %
-    \Gamma \judges e_0 \evalsto \true & %
-    \Gamma \judges e_1 \evalsto v_1 } %
-  { \Gamma \judges \ite{ e_0 }{ e_1 }{ e_2 } \evalsto v_1 }
+    e_0 \evalsto \true & %
+    e_1 \evalsto v_1 } %
+  { \ite{ e_0 }{ e_1 }{ e_2 } \evalsto v_1 } \qquad
   % evaluate if-then-else by else branch
   \inference[ ITE-F ]{ %
-    \Gamma \judges e_0 \evalsto \false & %
-    \Gamma \judges e_2 \evalsto v_2 } %
-  { \Gamma \judges \ite{ e_0 }{ e_1 }{ e_2 } \evalsto v_2 } \\
-  \\
+    e_0 \evalsto \false & %
+    e_2 \evalsto v_2 } %
+  { \ite{ e_0 }{ e_1 }{ e_2 } \evalsto v_2 } \\
   % evaluate an abstraction:
   \inference[ ABS ]{ } %
-  { \Gamma \judges \lambda x.\ e \evalsto \lambda x.\ e }
+  { \lambda x.\ e \evalsto \lambda x.\ e } \qquad
   % evaluate a fix:
-  \inference[ FIX ]{ } %
-  { \Gamma \judges \fix{ f }{ e } \evalsto \fix{ f }{ e } } \\
-  \\
-  % apply a lambda:
-  \inference[ APP-$\lambda$ ]{ %
-    \Gamma \judges e_0 \evalsto \lambda x.\ e_0' & %
-    \Gamma \judges e_1 \evalsto v_1 & %
-    \upd{\Gamma}{x}{v_1} \judges e_0' \evalsto v }
-  { \Gamma \judges e_0\ e_1 \evalsto v } \\
-  \\
-  % apply a fixpoint:
-  \inference[ APP-FIX ]{ %
-    \Gamma \judges e_0 \evalsto \fix{ f }{ e_0' } & %
-    \upd{ \Gamma }{ f }{ \fix{ f }{ e_0' } } \judges %
-    e_0'\ e_1 \evalsto v }
-  { \Gamma \judges e_0\ e_1 \evalsto v } 
+  \inference[ FIX ]{ e[ \fix{ f }{ e } / f ] \evalsto v } %
+  { \fix{ f }{ e } \evalsto v } \qquad
+  % application:
+  \inference[ APP ]{ %
+    e_0 \evalsto \lambda x.\ e_0' & %
+    e_1 \evalsto v_1 & %
+    e_0'[ v_1 / x ] \evalsto v }
+  { e_0\ e_1 \evalsto v } 
   \end{gather*}
   \caption{The natural semantics of $\stlc$.}
   \label{fig:nat-sem}
 \end{figure}
 %
-A value is a Boolean, an integer, a $\lambda$ abstraction, or a
-fixpoint abstraction;
+A value is a Boolean, an integer, or a $\lambda$ abstraction;
 %
 the space of values is denoted $\values$.
 %
 The semantics of $\stlc$ is defined by a natural semantics that
-relates expressions to values under contexts, given in
-\autoref{fig:nat-sem}.
-%
-The space of program contexts is denoted $\ctxs$.
+relates expressions to values, given in \autoref{fig:nat-sem}.
 %
 The space of rules used to define the $\stlc$ semantics is denoted
 $\evalrules$.
@@ -330,24 +314,36 @@ If STLC programs $P_0$ and $P_1$, applied to the same input, evaluate
 to the same value, then $P_0$ and $P_1$ are partially equivalent.
 %
 \begin{defn}
-  \label{defn:peq}
-  For $P_0, P_1 \in \stlc$, if for all $v, v_0, v_1 \in \values$ such
-  that $P_0\ v \evalsto v_0$ and $P_1\ v \evalsto v_1$, it holds that
-  $v_0 = v_1$, then $P_0$ and $P_1$ are \emph{partially equivalent}.
+  \label{defn:val-equiv}
+  Let $\Gamma \in \ctxs$.
+  % case: equivalence over base values:
+  \textbf{(1)} For each $v_0 \in \basevalues$, $\Gamma \judges
+  v_0 \equiv v_1$.
+  % case: equivalence over functions:
+  \textbf{(2)} For all $x_0, y_0 \in \vars$ and $e_0, e_1 \in \expr$
+  such that $f_0 = \lambda\ x_0. e_0, f_1 = \lambda x_1.\ e_1 \in
+  \values$, if for all $v_0, v_1 \in \values$ such that $v_0 \equiv
+  v_1$ and %
+  all $v_0', v_1' \in \values$ such that $\emptyset \judges f_0\ v_0
+  \evalsto v_0'$ and $\emptyset \judges f_1\ v_1 \evalsto v_1'$, it
+  holds that $v_0' \equiv v_1'$, then %
+  $f_0 \equiv f_1$.
 \end{defn}
+
 %
-The fact that $P_0$ and $P_1$ are partially equivalent is denoted $P_0
-\equiv P_1$.
+Two programs are partially equivalent if they evaluate to equivalent
+values.
+%
+\begin{defn}
+  \label{defn:prog-equiv}
+  For all $P_0, P_1 \in \stlc$, if for all $v_0, v_1 \in \values$ such
+  that $\emptyset \judges P_0 \evalsto v_0$ and $\emptyset \judges
+  P_1 \evalsto v_1$ it holds that $v_0 \equiv v_1$, then $P_0 \equiv
+  P_1$.
+\end{defn}
 %
 The main problem that we address in this work is, given STLC programs
 $P_0$ and $P_1$, to determine if $P_0 \equiv P_1$.
-
-% disclaimer: we're keeping it simple, it doesn't matter:
-\autoref{defn:peq} only allows programs to be partially equivalent if
-they take exactly one argument.
-%
-The definition can be directly generalized to include pairs of
-programs over tuples of arguments of arbitrary length.
 
 \subsection{Constrained Horn Clauses}
 \label{sec:chcs}
