--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -7,6 +7,8 @@
 
 \newcommand{\argsof}[1]{\mathsf{Args}[ #1 ]}
 
+\newcommand{\argtype}{\mathsf{ArgType}}
+
 \newcommand{\arityof}[1]{\mathsf{Arity}_{#1}}
 
 \newcommand{\bodies}[1]{\mathsf{Bodies}_{#1}}
@@ -14,6 +16,8 @@
 \newcommand{\bodyof}[1]{\mathsf{Body}_{#1}}
 
 \newcommand{\base}{\mathsf{Base}}
+
+\newcommand{\basevalues}{\mathsf{Vals}_B}
 
 \newcommand{\chc}[1]{\mathsf{CHC}[ #1 ]}
 
@@ -77,9 +81,13 @@
 
 \newcommand{\fix}[2]{\cc{fix}\ #1\ #2}
 
+\newcommand{\fns}{\mathsf{Fns}}
+
 \newcommand{\formulas}[1]{\mathsf{Forms}[ #1 ]}
 
 \newcommand{\freevars}{\mathsf{FreeVars}}
+
+\newcommand{\fresh}{\mathsf{Fresh}}
 
 \newcommand{\hastype}{\vdash}
 
@@ -113,6 +121,8 @@
 
 \newcommand{\mergeinvs}{\textsc{Mrg}\xspace}
 
+\newcommand{\nilrel}{\mathsf{NilRel}}
+
 \newcommand{\nodes}[1]{\mathsf{Nodes}[ #1 ]}
 
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
@@ -125,6 +135,8 @@
 
 \newcommand{\queryof}[1]{\mathsf{Query}_{#1}}
 
+\newcommand{\reftypes}{\mathsf{Ref}}
+
 \newcommand{\relinvs}[2]{\mathsf{ExpsInvs}[ #1, #2 ]}
 
 \newcommand{\relpreds}{\mathsf{Preds}}
@@ -132,6 +144,14 @@
 \newcommand{\relof}[1]{\mathsf{Rel}[ #1 ]}
 
 \newcommand{\relsof}[1]{\mathsf{Rels}_{#1}}
+
+\newcommand{\relctxs}{\mathsf{RelCtxs}}
+
+\newcommand{\reltypes}{\mathsf{RelTypes}}
+
+\newcommand{\reltypespos}[3]{\mathsf{RelTypes}[ #1, #2, #3 ]}
+
+\newcommand{\reltypestypes}[1]{\mathsf{RelTypes}[ #1 ]}
 
 \newcommand{\rulexts}{\mathsf{RuleExts}}
 
@@ -181,7 +201,11 @@
 
 \newcommand{\tilings}[2]{\mathsf{Tilings}[ #1, #2 ]}
 
+\newcommand{\typepos}{\mathsf{TypePos}}
+
 \newcommand{\types}{\mathsf{Types}}
+
+\newcommand{\unify}{\mathsf{Unify}}
 
 \newcommand{\unwind}[1]{\textsc{Unwind}[ #1 ]\xspace}
 
