--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -121,6 +121,8 @@
 
 \newcommand{\mergeinvs}{\textsc{Mrg}\xspace}
 
+\newcommand{\multiset}[1]{\mathsf{MultiSet}[ #1 ]}
+
 \newcommand{\nilrel}{\mathsf{NilRel}}
 
 \newcommand{\nodes}[1]{\mathsf{Nodes}[ #1 ]}
@@ -128,6 +130,8 @@
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
 
 \newcommand{\ops}{\mathsf{ops}}
+
+\newcommand{\subtype}{\preceq}
 
 \newcommand{\prevrule}[1]{\mathsf{Prev}[ #1 ]}
 
