--- a/draft/std.tex
+++ b/draft/std.tex
@@ -23,6 +23,10 @@
 
 \newcommand{\cons}{\mathbin{::}}
 
+\newcommand{\disjadd}[2]{\{ #1 \} \dot{\cup} #2}
+
+\newcommand{\disjunion}{ \dot{\cup} }
+
 \newcommand{\domain}{\mathsf{Dom}}
 
 \newcommand{\elts}[1]{\{ #1 \}}
