--- a/draft/approach.tex
+++ b/draft/approach.tex
@@ -86,16 +86,10 @@ equivalence type, is given in \autoref{sec:rel-type-sys}.
 \begin{figure}
   \centering
   \begin{gather*}
-    % rule: expression is a const:
-    \inference[ CONST ]{ %
-      \Gamma \judges E : \tau }{ %
-      \Gamma \judges \disjadd{ (c, i) }{ E } : %
-      \replace{ \tau }{ c }{ (c, i) } } 
-    % rule: expression is a var:
-    \inference[ VAR ]{ %
-      \Gamma \judges E : \tau }{ %
-      \Gamma \judges \disjadd{ (x, i) }{ E } : %
-      \replace{ \tau }{ x }{ (x, i) } } \\
+    % rule: expressions are all atomic (constants or variables):
+    \inference[ ATOMICS ]{ %
+      E \subseteq \atomics %
+    }{ \Gamma \judges E : \Gamma } \\
     % rule: expression is an op:
     \inference[ OP ]{ 
       \Gamma \judges %
@@ -134,9 +128,6 @@ equivalence type, is given in \autoref{sec:rel-type-sys}.
     \inference[ SUB ]{ %
       \Gamma \judges E : \tau & \tau \subtype \tau'
     }{ \Gamma \judges E : \tau' } 
-    % rule: empty set has the true relational type:
-    \inference[ EMPTY ]{ }{ %
-      \Gamma \judges \emptyset : \bigland \Gamma }
     % rule: split multiset of expressions:
     \inference[ UNION ]{ 
       \Gamma \judges E_0 : \tau_0 &
@@ -146,12 +137,10 @@ equivalence type, is given in \autoref{sec:rel-type-sys}.
   \caption{A proof system for relational types.}
   \label{fig:reltypes-rules}
 \end{figure}
+%
+\BH{atomics: fix to equate constants to copies in multisets}
 % introduce the has-type relation
 \BH{define the True relational type}
-%
-\BH{structure typing rules as having one rule for each form of expression}
-%
-\BH{define type-judgment system over relational types}
 %
 \BH{define subtyping rules}
 %
@@ -205,124 +194,96 @@ of $\tau_0$ and $\tau_1$.
 
 % types as proving equivalence:
 \BH{state main soundness result}
-
-\BH{integrate (deprecated) material from below}
-%
+% 
 \sys, given programs $P_0$ and $P_1$, attempts to synthesize a proof
-that $P_0 \equiv P_1$ that is represented as set sequences of
-sub-expressions of $P_0$ and $P_1$, each mapped to a relational
-invariant that relates all evaluations of the subexpressions.
+that $P_0 \equiv P_1$ as a proof that $\elts{ P_0, P_1 } :
+\tau_{\equiv}$.
 %
 For the rest of this section, let $P_0, P_1 \in \stlc$ be two fixed,
 arbitrary $\stlc$ programs.
 
-% define pairs of sequences of expressions:
-Let $\subexpseqs = \subexps{P_0}^{*} \times \subexps{P_1}^{*}$.
-%
-For each $e_0 \in \subexps{P_0}$ and $E_0 \in \subexps{P_0}^{*}$, let
-$\symvars{e_0 \cons E_0}$ denote a distinct copy of $\symvars{e_0}$,
-and similarly for each $e_1 \in \subexps{P_1}$ and $E_1 \in
-\subexps{P_1}^{*}$.
-%
-For $E_0 \in \subexps{ P_0 }$, let the formulas over the combined
-vocabulary of all non-empty prefixes of $E_0$ be denoted
-$\symvars{E_0} = \formulas{ %
-  \bigunion \setformer{ \symvars{E_0'} }{ E_0' \not= \epsilon \preceq
-    E_0 } }$.
-%
-Let the space of symbolic formulas over the combined vocabulary over
-all subexpression of $P_0$ and $P_1$ be denoted 
-\begin{align*}
-  \symrels{P_0}{P_1} =
-  \formulas{ %
-    & \bigunion \setformer{ \symvars{ e_0 \cons E_0 } }{ %
-      e_0 \in \subexps{P_0}, E_0 \in \subexps{P_0}^{*} } \union \\ %
-    & \bigunion \setformer{ \symvars{e_1 \cons E_1 } }{ %
-      e_1 \in \subexps{P_1}, E_1 \in \subexps{P_1}^{*} } }  
-\end{align*}
+% structures maintained by inference algorithm. Unfoldings:
+\sys attempts to extract a proof that $P_0, P_1 : \tau_{\equiv}$ from
+a map from multisets of \emph{unfoldings} of sub-expressions of $P_0$
+and $P_1$ to candidate relational types.
 %
 \begin{defn}
-  \label{defn:sym-rels}
-  Let $R: \subexpseqs \to \symrels{ P_0 }{ P_1 }$ be such that %
-  for all $E_0 \in \subexps{P_0}^{*}$ and $E_1 \in \subexps{P_1}^{*}$,
-  it holds that %
-  $R(E_0, E_1) \in \formulas{ \symvars{E_0} \union \symvars{ E_1 } }$.
+  \label{defn:unfoldings}
+  For each $f \in \vars$ and $e \in \expr$, the \emph{unfoldings} of
+  $\fix{f}{e}$, denoted $\unfoldings{ \fix{f}{e} }$
+
+ are the smallest set of expressions such that:
   %
-  Then $R$ are \emph{subexpression-sequence relations}.
+  \begin{enumerate}
+  \item $f \in \unfoldings{ \fix{f}{e} }$;
+  \item For each $e' \in \unfoldings{ \fix{f}{e} }$, $\replace{
+      \fix{f}{e} }{ f }{ e' } \in \unfoldings{ \fix{f}{e} }$.
+  \end{enumerate}
 \end{defn}
 %
-The set of all sub-expression sequence relations is denoted
-$\subexpseqrels{P_0}{P_1}$.
+\BH{fix defn of unfoldings above to allow the unfolded expressions to
+  occur as subexpressions of the main expressions}
+%
+\BH{give examples}
 
-% relational invariants
-% define relational invariants
-Relational invariants of $P_0$ and $P_1$ are a map from pairs of
-sequences of subexpressions of $P_0$ and $P_1$, with each pair $E$
-mapped to a formula that relates the evaluations of all expressions in
-$E$.
-%
-% define tilings:
-For each space $X$ and $s, s_0, s_1 \in X^{*}$, if there are some
-$s_0', s_1', s_2' \in X^{*}$ such that $s = s_0' \concat s_1' \concat
-s_2'$, $s_0 = s_0' \concat s_2'$, and $s_1 = s_2' \concat s_1'$, then
-$s_0$ and $s_1$ are a \emph{tiling} of $s$.
-%
-For $s, s' \in X^{*}$, let the sequence of sequences that extend $s$
-and are extended by $s'$ be denoted $\seqrange{s'}{s}$.
+% invariant structure:
+Partial relational invariants are a map from multisets of unfoldings
+to relational types.
 %
 \begin{defn}
-  \label{defn:rel-invs}
-  Let $I_0, I_1 \in \subexpseqrels{P_0}{P_1}$ be such that %
-  % condition: relation of empty sequences is entailed by true:
-  \textbf{(1)} $\true \entails I_0( \epsilon, \epsilon )$; %
-  \textbf{(2)} $\true \entails I_1(\epsilon, \epsilon)$;
-  % condition: invariants entail equivalence:
-  \textbf{(3)} $I_0([ P_0 ], [ P_1 ] ), I_1( [ P_0 ], [ P_1 ]),
-  \alpha^0_0 = \alpha^1_0 \entails \nu^0 = \nu^1$;
-  % steps in P0 are valid:
-  \textbf{(4)} for all $E_0 \in \subexps{P_0}^{*}$, %
-  $E_1 \in \subexps{P_1}^{*}$, and %
-  each $r \in \instrules{P_0}$ with $E_0' = \rulesucc{r} \cons E_0$,
-  $E = (E_0', E_1)$, and $E_0'' = \rulepreds{ r } \concat E_0$, either
-  \[ I_0(\rulepreds{ r } \concat E_0, E_1), %
-  I_1(\rulepreds{ r } \concat E_0, E_1), %
-  \subs{ \symstep{ r } }{ %
-    \symvars{ \seqrange{ E_0'' }{ E_0 } }, \symvars{ E_0' } }
-  \entails I_0( E )
-  \]
-  or there are some $E_0'', E_0''' \in \subexps{P_0}^{*}$ that tile
-  $E_0'$ and
-  \[ \replace{ I_0(E_0'', E_1) }{ %
-    \symvars{ E_0'' } }{ \symvars{ \seqrange{E_0'''}{ E_0' } } }, %
-  I_0(E_0''', E_1) \entails I_0(E) \]
-  % symmetric condition for P1:
-  \textbf{(5)} for all $E_0 \in \subexps{P_0}^{*}$, %
-  each $r \in \instrules{ P_1 }$, and all $E_1 \in \subexps{P_1}^{*}$
-  with $E_1' = \rulesucc{ r } \cons E_1$ and $E = (E_0', E_1)$, either
-  \[ I_0(E_0, \rulepreds{ r } \concat E_1), %
-  I_1(E_0, \rulepreds{ r } \concat E_1),
-  \subs{ \symstep{ r } }{ %
-    \symvars{ \seqrange{ E_1'' }{ E_1 } }, \symvars{ E_1' } }
-  \entails I_1(E) \] 
-  or there are some $E_1'', E_1''' \in \subexps{ P_1 }^{*}$ that tile
-  $E_1'$ and
-  \[ \replace{ I_1(E_0, E_1'') }{ %
-    \symvars{ E_1'' } }{ \symvars{ \seqrange{ E_1''' }{ E_1 ' } } }, %
-  I_1(E_0, E_1''') \entails I_1(E)
-  \]
+  \label{defn:inferred-invs}
+  Let
+  \begin{itemize}
+  \item 
+    % subexpressions of unfoldings:
+    $\mathcal{E} \subseteq \pset{ \subexps{ \unfoldings{P_0} } \union
+      \subexps{\unfoldings{P_1} } }$;
+  \item
+    % context types:
+    $\Gamma : \mathcal{E} \to \reltypes$;
+  \item
+    % relational types of subexpressions:
+    $T : \mathcal{E} \to \reltypes$
+  \end{itemize}
   %
-  Then $I_0$ and $I_1$ are \emph{relational invariants} of $P_0$ and
-  $P_1$.
+  be such that 
+  \begin{itemize}
+  \item 
+    % multiset of programs has the equivalence type:
+    $T( \elts{ P_0, P_1 } ) \entails \tau_{ \equiv }$; 
+  \item 
+    % type of set is subtype of type of extension with fixpoint
+    % symbol
+    For all $E \in \mathcal{E}$ and each $f \in \vars$, $T(E) \subtype
+    T(\disjadd{ f }{ E })$.
+  \item 
+    % relational types are consistent under tiling:
+    For each $E \in \mathcal{E}$ and $E_0, E_1 \subseteq E$ such that
+    $E = E_0 \union E_1$, it holds that $T(E_0) \land T(E_1) \subtype
+    T(E)$.
+  \item 
+    % relational types are consistent under subtypes:
+    For all $e \in \expr$, $E \subseteq \expr$ such that
+    $\disjadd{e}{E} \in \mathcal{E}$, $\Gamma(\subexps{e} \union E)
+    \judges \subexps{ e } \union E : T( \subexps{e} \union E)$
+    supports that $\Gamma(\disjadd{e}{E}) \judges \disjadd{e}{E} :
+    T(\disjadd{e}{E})$.
+  \end{itemize}
 \end{defn}
 %
-The space of relational invariants of $P_0$ and $P_1$ is denoted
-$\relinvs{P_0}{P_1}$.
+\BH{patch to account for how predecessors actually work in typing
+  rules}
+%
+\BH{add choice conditions that make invariants evidence}
 
-% example of relational invariants:
-\begin{ex}
-  \label{ex:rel-invs}
-  \BH{give example relational invariants}
-\end{ex}
+% define when invariants are inductive:
+Unfolded invariants are inductive if they define a proof of the fact
+that $P_0$ and $P_1$ have type $\tau_{\equiv}$.
+% 
+\begin{defn}
+  \label{defn:ind-unfolded}
+  \BH{complete}
+\end{defn}
 
 % evidence is a valid proof of partial equivalence:
 If $P_0$ and $P_1$ have relational invariants, then $P_0 \equiv P_1$.
@@ -331,132 +292,14 @@ If $P_0$ and $P_1$ have relational invariants, then $P_0 \equiv P_1$.
   \label{lemma:equiv-evidence}
   If there are $R \in \relinvs{P_0}{P_1}$, then $P_0 \equiv P_1$.
 \end{lemma}
-
-% define class of invariants that are actually maintained
-\sys, given programs $P_0$ and $P_1$ attempts to determine if $P_0
-\equiv P_1$ by synthesizing relational invariants of $P_0$ and $P_1$
-from a map from pairs of sequences of derivations of subexpressions of
-$P_0$ and $P_1$ to symbolic relations.
-%
-Let the space of derivation relations of $P_0$ and $P_1$ be denoted
-$\dersrels{ P_0 }{ P_1 } = \derctxs{P_0}^{*} \times
-\derctxs{P_1}^{*} \partto \symrels{P_0}{P_1}$.
-%
-\begin{defn}
-  \label{defn:der-invs}
-  Let $I \in \dersrels{ P_0 }{ P_1 } $ be such that
-  % maps empty sequence of contexts to true:
-  \textbf{(1)} $\true \entails I(\epsilon, \epsilon)$;
-  % maps empty contexts to invariant that supports equivalence:
-  \textbf{(2)} $I([ \epsilon ], [ \epsilon ]), \alpha_0 = \alpha_1
-  \entails \nu_0 = \nu_1$;
-  % respects semantics of evaluation rules of P0:
-  \textbf{(3)} for all $\gamma_0 \in \derctxs{ P_0 }$, %
-  each $r \in \instrules{ P_0 }$ with $\Gamma_0 = \rulexts( \gamma_0,
-  r) $, %
-  all $\Gamma_0' \in \derctxs{ P_0 }^{*}$, and %
-  all $\Gamma_1 \in \derctxs{P_1}^{*}$ such that $\Gamma = (\Gamma_0
-  \concat \Gamma_0', \Gamma_1) \in \domain(I)$,
-  \[ I(\Gamma), %
-  \subs{ \symstep{ r } }{ %
-    \symvars{ \derexts{ P_0 }(\gamma_0, r) }, \symvars{ \gamma_0 } }  %
-  \entails I( \gamma_0 \cons \Gamma_0, \Gamma_1) \]
-  %
-  % respects semantics of evaluation rules of P1:
-  \textbf{(4)} for all $\Gamma_0 \in \derctxs{ P_0 }$, %
-  each $\gamma_1 \in \derctxs{ P_1 }$, %
-  each $r \in \instrules{ P_1 }$ with $\Gamma_1 = \rulexts( \gamma_1,
-  r)$, and %
-  all $\Gamma_1' \in \derctxs{ P_0 }^{*}$ such that $\Gamma =
-  (\Gamma_0, \Gamma_1 \concat \Gamma_1') \in \domain(I)$,
-  \[ I(\Gamma), %
-  \subs{ \symstep{ r } }{ %
-    \symvars{ \derexts{ P_1 }(\gamma_1, r) }, \symvars{ \gamma_1 } } %
-  \entails I( \Gamma_0, \gamma_1 \cons \Gamma_1) \]
-  % respects tiling in P0:
-  \textbf{(5)} for all $\Gamma_0, \Gamma_0', \Gamma_0'' \in
-  \subders{P_0}^{*}$ such that $\Gamma_0'$ and $\Gamma_0''$ are a
-  tiling of $\Gamma_0$ and all $\Gamma_1 \in \derctxs{P_1}^{*}$ such
-  that $\Gamma = (\Gamma_0, \Gamma_1) \in \domain(I)$,
-  \[ I(\Gamma_0', \Gamma_1), I(\Gamma_0'', \Gamma_1) \entails %
-  I(\Gamma) \]
-  % respects tiling in P1:
-  \textbf{(6)} for all $\Gamma_0 \in \derctxs{P_0}^{*}$ and %
-  all $\Gamma_1, \Gamma_1', \Gamma_1'' \in \subders{P_1}^{*}$ such
-  that $\Gamma_1'$ and $\Gamma_1''$ are a tiling of $\Gamma_1$ and
-  $\Gamma = (\Gamma_0, \Gamma_1) \in \domain(I)$,
-  \[ I(\Gamma_0, \Gamma_1'), I(\Gamma_0, \Gamma_1'') \entails %
-  I(\Gamma) \]
-\end{defn}
-%
-The space of all derivation relational invariants of $P_0$ and $P_1$
-is denoted $\dersinvs{ P_0 }{ P_1 }$.
-%
-For $I \in \dersinvs{ P_0 }{ P_1 }$, $d_0 \in \dertrees{P_0}$, and
-$d_1 \in \dertrees{P_1}$, for all $\gamma_0 \in \derctxs{d_0}$ and
-$\gamma_1 \in \derctxs{ d_1 }$, it holds that $(\gamma_0, \gamma_1)
-\in \domain(I)$, then $I$ are derivation relational invariants of
-$d_0$ and $d_1$.
-%
-The space of all such invariants is denoted $\dersinvs{ d_0 }{ d_1 }$.
-
-%
-\BH{reference running example}
-%
-
-% define inductive derivation relational invariants
-Derivation relational invariants are inductive if they define
-relational invariants.
-%
-In particular, for $I \in \dersinvs{P_0}{P_1}$, let $\exprel{I} \in
-\relinvs{P_0}{P_1}$ be such that for all $E_0 \in \subexps{P_0}^{*}$
-and $E_1 \in \subexps{P_1}^{*}$,
-\begin{align*}
-  % the invariant of the sequences of expressions is
-  \exprel{I}(E_0, E_1) = %
-  % the conjunction of invariants over all nodes:
-  \bigland \setformer{ I(\Gamma_0, \Gamma_1) }{ %
-    & \Gamma_0 \in \derctxs{ P_0 }, \headexps(\Gamma_0) = E_0, \\ %
-    & \Gamma_1 \in \derctxs{ P_1 }, \headexps(\Gamma_1) = E_1, %
-    (\Gamma_0, \Gamma_1) \in \domain(I) } 
-\end{align*}
-%
-$I \in \dersinvs{P_0}{P_1}$ are inductive if they can be decomposed to
-form derivation relations that define relational invariants of $P_0$
-and $P_1$.
-%
-For all $I_0, I_1 \in \dersrels{P_0}{P_1}$, let $I_0 \union I_1$ 
-be such that 
-% case: domain of only I0
-\textbf{(1)} for $\Gamma_0 = \domain(I_0) \setminus \domain(I_1)$,
-$\restrict{(I_0 \union I_1)}{ \Gamma_0 } = \restrict{I_0}{ \Gamma_0
-}$;
-% case: domain of only I1
-\textbf{(2)} for $\Gamma_1 = \domain(I_1) \setminus \domain(I_1)$,
-$\restrict{(I_0 \union I_1)}{ \Gamma_1 } = \restrict{I_1}{ \Gamma_1
-}$;
-% case: domain of only both
-\textbf{(3)} for each $\Gamma \in \domain(I_0) \intersection
-\domain(I_1)$, $(I_0 \union I_1)(\Gamma) = I_0(\Gamma) \land
-I_1(\Gamma)$.
-%
-\begin{defn}
-  \label{defn:inductive-der-rels}
-  For $I_0, I_1 \in \dersrels{P_0}{P_1}$, %
-  if $(\exprel{I_0}, \exprel{I_1}) \in \relinvs{P_0}{P_1}$, then %
-  $I_0 \union I_1$ are \emph{inductive} derivation relational
-  invariants.
-\end{defn}
-%
-Inductive derivation relational invariants are evidence of partial
-equivalence, by \autoref{lemma:equiv-evidence}.
 %
 \sys, given programs $P_0$ and $P_1$, attempts to determine their
-partial equivalence by synthesizing inductive derivation relational
-invariants.
+partial equivalence by synthesizing inductive unfolded relational
+types.
 
 \subsection{Verification algorithm}
 \label{sec:verifier}
+
 \begin{figure}
   \centering
 \begin{algorithm}[H]
@@ -472,10 +315,10 @@ invariants.
   \Output{A decision as to whether $\cc{P}_0 \equiv \cc{P}_1$.}
   % verify: main procedure
   \myproc{$\verify(\cc{P}_0, \cc{P}_1)$ \label{line:core-begin}} %
-  { \myproc{$\verifyaux(I \in \dersinvs{ P_0 }{ P_1 })$ %
+  { \myproc{$\verifyaux(T \in \unfoldreltypes{ P_0 }{ P_1 })$ %
       \label{line:core-aux-begin} }{ %
       % check if the solution is inductive:
-      \Switch{$\chkinductive(P_0, P_1, I)$ %
+      \Switch{$\chkinductive(T)$ %
         \label{line:core-chkind} }{ %
         \lCase{$\isind$}{ %
           % case: it is. Return that P0, P1 are equivalent.
@@ -487,9 +330,9 @@ invariants.
           \Switch{$\verifyders(d_0, d_1)$ \label{line:core-vders} }{ %
             \lCase{$\nonequiv$: \label{line:core-subcase-non-equiv} }{ %
               \Return{$\false$} \label{line:core-ret-non-equiv} } %
-            \lCase{$I' \in \dersinvs{P_0}{P_1}$: %
+            \lCase{$T' \in \unfoldreltypes{ P_0 }{ P_1 }$: %
               \label{line:core-subcase-invs} }{ %
-              \Return{ $\verifyaux(\mergeinvs(I, I'))$ } %
+              \Return{ $\verifyaux(\mergeinvs(T, T'))$ } %
               \label{line:core-recurse}
             } %
           } %
@@ -511,29 +354,29 @@ invariants.
 The equivalence verifier \verify is given in \autoref{alg:verify}.
 %
 \verify, given $P_0, P_1 \in \stlc$ (\autoref{line:core-begin}),
-defines a procedure $\verifyaux$ that, given $I \in
-\dersinvs{P_0}{P_1}$, attempts to determine if $P_0 \equiv P_1$ by
-finding inductive derivation relational invariants built from $I$
+defines a procedure $\verifyaux$ that, given $T \in
+\unfoldreltypes{P_0}{P_1}$, attempts to determine if $P_0 \equiv P_1$ by
+finding inductive derivation relational invariants built from $T$
 (\autoref{line:core-aux-begin}---\autoref{line:core-aux-end}).
 %
 \verify calls \verifyaux on the empty map of derivation relational
 invariants and returns the result (\autoref{line:core-base}).
 
 % verify auxiliary procedure:
-\verifyaux, given $I \in \dersinvs{P_0}{P_1}$, runs procedure
-\chkinductive on $I$ (\autoref{line:core-chkind};
+\verifyaux, given $T \in \unfoldreltypes{P_0}{P_1}$, runs procedure
+\chkinductive on $T$ (\autoref{line:core-chkind};
 %
 \chkinductive is given in \autoref{sec:chk-ind}).
 %
-If \chkinductive determines that some restriction of $I$ are
+If \chkinductive determines that some restriction of $T$ are
 inductive, then \chkinductive returns the value $\isind$, and
 \verifyaux returns that $P_0 \equiv P_1$
 (\autoref{line:core-ret-equiv}).
 
 % case: no inductive restriction found:
-Otherwise, \chkinductive returns $d_0 \in \dertrees{ P_0 }$ and $d_1
-\in \dertrees{ P_1 }$ that do not have derivation relational
-invariants in $I$ (\autoref{line:core-case-cex}).
+Otherwise, \chkinductive returns $d_0 \in \evalders{ P_0 }$ and $d_1
+\in \evalders{ P_1 }$ that do not have derivation relational
+invariants in $T$ (\autoref{line:core-case-cex}).
 %
 \verifyaux then runs a procedure \verifyders on $d_0$ and $d_1$
 (\autoref{line:core-vders}; \verifyders is given in
@@ -545,19 +388,19 @@ If \verifyders returns the value $\nonequiv$ to denote that $d_0
 (\autoref{line:core-ret-non-equiv}).
 
 % subcase: finds path-pair invariants:
-Otherwise, \verifyders returns $I' \in \dersinvs{d_0}{d_1}$
+Otherwise, \verifyders returns $T' \in \unfoldreltypes{d_0}{d_1}$
 (\autoref{line:core-subcase-invs}).
 %
-\verifyaux runs a procedure \mergeinvs on $I$ and $I'$, which
+\verifyaux runs a procedure \mergeinvs on $T$ and $T'$, which
 generates derivation relational invariants of all pairs of derivations
-with relational invariants in $I$ or $I'$;
+with relational invariants in $T$ or $T'$;
 %
 \mergeinvs is given in \autoref{sec:merge}.
 %
 \verifyaux recurses on the generated invariants and returns the result
 (\autoref{line:core-recurse}).
 
-\subsubsection{Determining inductiveness of derivation invariants}
+\subsubsection{Determining inductiveness of unfolded relational types}
 \label{sec:chk-ind}
 % algorithm for checking inductiveness:
 \begin{algorithm}[t]
@@ -568,81 +411,70 @@ with relational invariants in $I$ or $I'$;
   % Declare sub-program (procedure) markers.
   \SetKwProg{myproc}{Procedure}{}{}
   % Inputs: a program
-  \Input{$I \in \dersinvs{P_0}{P_1}$.}
+  \Input{$T \in \unfoldreltypes{ P_0 }{ P_1 }$.}
   % Output: decision for safety
-  \Output{$\isind$ to denote that some restriction of $I$ is
+  \Output{$\isind$ to denote that some restriction of $T$ is
     inductive, or $d_0 \in \progders{P_0}$ and %
-    $d_1 \in \progders{P_1}$ without contexts undefined in $I$.}
+    $d_1 \in \progders{P_1}$ that evaluate sub-expressions without
+    types in $T$.}
   % verify: main procedure
-  \myproc{$\chkinductive(P_0, P_1 \in \stlc, %
-    I_{\Gamma} \in \dersinvs{ P_0 }{ P_1 } )$ %
-    \label{line:chkind-begin}} %
-  { \myproc{$\chkindaux(\Gamma_0 \in \derctxs{P_0}^{*}, %
-      \Gamma_1 \in \derctxs{P_1}^{*}, %
-      I_E \in \relinvs{ P_0 }{ P_1 })$ %
+  \myproc{$\mathcal{E} \subseteq T \in \unfoldreltypes{ P_0 }{ P_1 }$ %
+    \label{line:chkind-begin} } %
+  { \myproc{ 
+      % given obligation sets of unfolded expressions,
+      $\chkindaux(E$, %
+      % and a map from sets of fixpoint expressions to relational
+      % types,
+      $F : \mathcal{E} \to \reltypes)$ %
       \label{line:chkind-aux-begin} } %
-    { % bind the expressions of Gamma:
-      $E \assign (\headexps(\Gamma_0), \headexps(\Gamma_1))$ %
-      \label{line:chkind-bind-exps} \;
-      % if Gamma is not defined,
-      \lIf{$(\Gamma_0, \Gamma_1) \notin \domain(I_{\Gamma})$}{ %
-        % return a sequence of derivations of the head expressions
-        \Return{$\chooseder(E)$} \label{line:chkind-counters} %
-      }
-      % 
-      \Else{ %
-        $\varphi_E \assign I_{E}(E)$ \label{line:bind-exp-invs} \; %
-        $\varphi_{\Gamma} \assign I_{\Gamma}(\Gamma_0, \Gamma_1)$ %
-        \label{line:bind-der-invs} \; %
-        \lIf{$\varphi_E \entails \varphi_{\Gamma}$}{ %
-          \Return{$\isind$} \label{line:ret-isind} %
-        } %
-        \Else{
-          % strengthen the invariants at E:
-          $I_E' = \upd{I_E}{ E }{ \varphi_E \land \varphi_{\Gamma} }$ %
-          \label{line:str-invs} \; %
-          $\tileind_0 \assign %
-          \biglor \setformer{ %
-            \chkindaux(\Gamma_0', \Gamma_1, I_E') = %
-            \chkindaux(\Gamma_0'', \Gamma_1, I_E') = \isind }{ %
-            \Gamma_0', \Gamma_0'' \in \derctxs{P_0}, %
-            \tiles(\Gamma_0, \Gamma_0', \Gamma_0'') }$ %
-          \label{line:tile-isind0} \; %
-          $\tileind_1 \assign %
-          \biglor \setformer{ %
-            \chkindaux(\Gamma_0, \Gamma_1', I_E') = %
-            \chkindaux(\Gamma_0, \Gamma_1'', I_E') = \isind }{ %
-            \Gamma_1', \Gamma_1'' \in \derctxs{P_1}, %
-            \tiles(\Gamma_1, \Gamma_1', \Gamma_1'') }$ %
-          \label{line:tile-isind1} \; %
-          \lIf{$\tileind_0 \lor \tileind_1$}{ %
-            \Return{$\isind$} \label{line:tile-isind} %
-          } %
-          \lElse{ %
-            \Return{ $\chooseres( %
-              \unwind{ P_0 }(\Gamma_0, \Gamma_1, I_E'), %
-              \unwind{ P_1 }(\Gamma_0, \Gamma_1, I_E'))$ } %
-            \label{line:ret-unwind} %
-          } %
-        } %
-        \label{line:chkind-aux-end} 
-      } %
-    } 
-    \Return{$\chkindaux(\epsilon, \epsilon, \lambda x.\ \true)$} %
-    \label{line:chkind-base} 
-  } %
-  \caption{ % interface of chkinductive:
-    \chkinductive: determines the inductiveness of derivation
-    relational invariants. }
-  \label{alg:chk-ind}
+    { % if all of the expressions are atomic,
+      \lIf{$E \subseteq \atomics$}{ %
+        % then whatever invariants that we have are inductive:
+        \Return{$\isind$} \label{line:ret-isind} }
+      % if E contains a fixpoint symbol, 
+      \lIf{$f \in \fixvars, E$}{ %
+        % then return E grouped with the unfolding of f
+        \Return{ $\replace{ E }{ f }{ \fix{ f }{ \fixexpr{ f } } }$ 
+        } }  %
+      % for each expression that is a fixpoint, 
+      \ForEach{$\fix{ f }{ e } \in E$}{ 
+        % if the maintained type for the core expressions is stronger,
+        \lIf{$T'(\orgexprs(E)) \entails T(E)$}{
+          % then return that this part is inductive
+          \Return{$\isind$} } 
+        \lElse{ 
+          % otherwise, strengthen the maintained invariants
+          $T' \assign \upd{ T' }{ \orgexprs(E) }{ T(E) }$ } }
+      % for each tiling of E,
+      \ForEach{$E_0 \union E_1 = E$}{ 
+        % if the results are both inductive,
+        \lIf{$\chkindaux(E_0, T') = %
+          \chkindaux( E_1, T' ) = %
+          \isind$}{
+          % then this set is inductive:
+          \Return{$\isind$}
+        } }
+      % otherwise,
+      \Return{$\unwind(E, T')$}
+    } }
+  \Return{$\chkindaux(\elts{ P_0, P_1 }, \lambda x.\ \true)$} %
+  \label{line:chkind-base} 
+  % 
+\caption{ % interface of chkinductive:
+  \chkinductive: determines the inductiveness of derivation
+  relational invariants. }
+\label{alg:chk-ind}
 \end{algorithm}
+%
+\BH{define map from each fixpoint variable to its expression}
+
 %
 The algorithm \chkinductive for checking the inductiveness of
 derivation relational invariants is given in
 \autoref{alg:chk-ind}.
 %
 \chkinductive, given $P_0, P_1 \in \stlc$ and $I \in
-\dersinvs{P_0}{P_1}$ (\autoref{line:chkind-begin}), defines a
+\unfoldreltypes{P_0}{P_1}$ (\autoref{line:chkind-begin}), defines a
 procedure \chkindaux that, given $\Gamma_0 \in \derctxs{P_0}^{*}$,
 $\Gamma_1 \in \derctxs{P_1}^{*}$, and $I: \subexpseqs \to
 \symrels{P_0}{P_1}$, returns either %
@@ -700,54 +532,7 @@ If so, then \chkindaux returns that $\Gamma_0$ and $\Gamma_1$ are
 inductive under $I_E'$ (\autoref{line:tile-isind}).
 
 % aux fn: subcase: unwind
-Otherwise, \chkindaux runs the procedure $\unwind{P_0}$ on $\Gamma_0$,
-$\Gamma_1$, and $I'$, which returns either \textbf{(1)} $\isind$ to
-denote that each extension of $\Gamma_0$ in $P_0$ paired with
-$\Gamma_1$ is inductive in $I_{\Gamma}$ under $I_E'$ or %
-\textbf{(2)} returns derivations of $E$ that do not have invariants in
-$I_{\Gamma}$;
-%
-the implementation of $\unwind{P_0}$ is given below.
-%
-\chkindaux runs a similar procedure $\unwind{P_1}$ on $\Gamma_0$,
-$\Gamma_1$, and $I_E'$.
-% chooseres:
-\chkindaux runs \chooseres on the results of the two calls.
-%
-If either call returns $\isind$, then \chooseres returns $\isind$.
-%
-Otherwise, \chooseres returns either the sequence of derivations
-returned by the call to $\unwind{P_0}$, or the sequence returned by
-the call to $\unwind{P_1}$.
-
-\paragraph{Implementation of \textsc{unwind}}
-%
-$\unwind{P_0}$, given $\Gamma_0 \in \derctxs{P_0}^{*}$, $\Gamma_1 \in
-\derctxs{P_1}^{*}$, and $I : \subexpseqs \partto \symrels{P_0}{P_1}$,
-first determines if $\Gamma_0 = \epsilon$.
-%
-If so, then $\unwind{P_0}$ returns the empty sequence of derivations.
-
-% case: non-empty sequence of derivations:
-Otherwise, let $\gamma_0 \in \derctxs{P_0}$ and $\Gamma_0' \in
-\derctxs{P_0}$ be such that $\Gamma_0 = \gamma_0 \cons \Gamma_0'$.
-%
-For each $r \in \instrules{ P_0 }$ that extends $\gamma_0$ in $P_0$
-and each $0 \leq i < \degreeof(r)$, $\unwind{P_0}$ runs \chkindaux on
-$(((r, i) \cons \gamma_0) \cons \Gamma_0, \Gamma_1$.
-%
-If for each $r$ and $i$, \chkindaux returns $\isind$, then
-$\unwind{P_0}$ returns $\isind$.
-%
-Otherwise, if there is some $r$ and $0 \leq i < \degreeof(r)$ such
-that \chkindaux returns $D \in \ders{P_0}^{*}$, then $\unwind{P_0}$
-returns the derivation $\headexps(\rulesucc{r})$ constructed by
-applying $D$ to $r$, followed by derivations for $\headexps(\Gamma_0)$
-and $\headexps(\Gamma_1)$.
-
-% handwave P1:
-The implementation of $\unwind{P_1}$ is symmetric to that of
-$\unwind{P_0}$.
+Otherwise, \chkindaux runs the procedure $\unwind$...
 
 \subsubsection{Verifying equivalence of derivations}
 \label{sec:verify-ders}
@@ -857,7 +642,7 @@ If \solvechc returns that $\mathcal{S}$ has no solution, then
 %
 Otherwise, if \solvechc returns some $\sigma \in \solutions{
   \mathcal{S} }$, then \verifyders returns $I \in
-\dersinvs{P_0}{P_1}$, where for each $\Gamma_0 \in \derctxs{ P_0 }$
+\unfoldreltypes{P_0}{P_1}$, where for each $\Gamma_0 \in \derctxs{ P_0 }$
 and $\Gamma_1 \in \derctxs{ P_1 }$,
 \[ I(\Gamma_0, \Gamma_1) = %
 \subs{ \sigma(\Gamma_0, \Gamma_1) }{ %
@@ -867,8 +652,8 @@ and $\Gamma_1 \in \derctxs{ P_1 }$,
 \subsubsection{Merging Derivation Relational Invariants}
 \label{sec:merge}
 % mergeinvs: give components of invariants 0:
-$\mergeinvs$, given $I_0, I_1 \in \dersinvs{P_0}{P_1}$, returns $I'
-\in \dersinvs{P_0}{P_1}$ such that
+$\mergeinvs$, given $I_0, I_1 \in \unfoldreltypes{P_0}{P_1}$, returns $I'
+\in \unfoldreltypes{P_0}{P_1}$ such that
 % case: domain is only P0:
 \textbf{(1)} for $C_0 = \domain(I_0) \setminus \domain(I_1)$,
 $\restrict{I'}{C_0} = \restrict{I_0}{C_0}$; 
