--- a/draft/shorthand.tex
+++ b/draft/shorthand.tex
@@ -135,6 +135,8 @@
 
 \newcommand{\nonequiv}{\mathsf{NonEquiv}}
 
+\newcommand{\onestep}{\mathsf{OneStep}}
+
 \newcommand{\ops}{\mathsf{ops}}
 
 \newcommand{\orgexprs}{\mathsf{Orgs}}
@@ -233,9 +235,9 @@
 
 \newcommand{\verifyaux}{\textsc{VAux}\xspace}
 
-\newcommand{\verifyders}{\textsc{VerifyDers}\xspace}
+\newcommand{\verifyunfoldings}{\textsc{VerifyUnfoldings}\xspace}
 
-\newcommand{\verifydersaux}{\textsc{VD}'\xspace}
+\newcommand{\verifyunfoldingsaux}{\textsc{VerifyUnfoldings}'\xspace}
 
 \newcommand{\vocab}{\mathsf{Vocab}}
 
